@@ -10,7 +10,8 @@ import fcntl
 import fnmatch
 import logging
 import datetime
-import tempfile
+import traceback
+import distutils
 import subprocess
 import collections
 
@@ -74,16 +75,19 @@ class loader(object):
         self.config_vars = None
         self.pid = None
         self.lockfile = None
+        self.ets_codes_found = None
         self.sym_link = ''
         self.class_path = '.:'
+        self.upd_cbxs = None
+        self.msg_type = { True:'SUCCESS', False:'FAILURE' }
         try:
             self.class_path += os.environ['CLASSPATH'] + ':'
         except KeyError:
             pass
         self.user = os.environ['USER']
         self.valid_sites = []
-        self.std_out = None
-        self.std_err = None
+        self.std_out = { 'create_batch': None, 'ets_valid':None, 'request_set':None }
+        self.std_err = { 'create_batch': None, 'ets_valid':None, 'request_set':None }
 
         self.batch_create_data = dict()
 
@@ -103,6 +107,51 @@ class loader(object):
 
         if self.options.show:
             self.printconfig(True)
+
+        opt_valid = True
+        self.opt_path = 'one'
+
+        msg_head = 'Command line Options:\n'
+
+        for arg, value in sorted(vars(self.options).items()):
+            msg_head += '%s = %r\n' % (arg, value)
+
+        self.log.info(msg_head)
+
+        msg_head = 'Validating command line options:\n'
+
+
+        if self.options.ets_validate or self.options.run_request:
+            self.opt_path = 'two'
+            if not self.options.batch_id:
+                msg  = '\nERROR: Cannot proceed without batch ID with the following options.\n\t--ets-validate, --run-requestset\nSpecify [option] --batch-id <ID>'
+                opt_valid = False
+            if self.options.blsite or self.options.blsize:
+                msg = '\nERROR: Cannot start a new batch in this mode. \n\tEITHER Remove --batch-size and --site options and retry.'
+                msg += '\tOR Remove --ets-validate, --run-requestset and retry'
+                msg += '\n\tNOTE If running a new batch, --ets-validate, --run-requestset are TRUE by default. You can set it to yes/no in the configuration file'
+                opt_valid = False
+        else:
+            if not (self.options.blsite and self.options.blsize):
+                msg = '\nERROR: Require --batch-size and --site to proceed with new batch'
+                opt_valid = False
+            else:
+                if self.options.batch_id:
+                    msg = '\nERROR: --batch-size and --site options will start a new batch. Remove --batch-id <ID> option'
+                    opt_valid = False
+
+        msg_head +=  self.msg_type [ opt_valid ]
+        if opt_valid:
+            msg_head += (', OPT_PATH: %s' % self.opt_path)
+            if self.options.batch_id:
+                msg_head += (', BATCH_ID: %d\n' % self.options.batch_id)
+
+        if not opt_valid:
+            sys.stderr.write(msg+'\n')
+            self.log.error(msg)
+            sys.exit(1)
+        else:
+            self.log.info(msg_head)
 
         self.pid = os.getpid()
         self.lockfile = os.path.join( self.load_opts['temp_path'], self.load_opts['category'] + '.lock')
@@ -157,17 +206,102 @@ class loader(object):
             self.log.info(out)
 
 
-    def execute(self):
+    def run_create_batch(self):
         cmd = [ 'java', '-Xms512m', '-Xmx1024m', self.load_opts['javaclass'] ]
         cmd.append(self.options.blsite)
         cmd.append(str(self.options.blsize))
 
-        self.log.info(' '.join(cmd))
-        (self.std_out, err, p) =  os_system_command( ' '.join(cmd), self.run_env)
+        self.log.debug(' '.join(cmd))
+        (self.std_out['create_batch'], self.std_err['create_batch'], p) =  os_system_command( ' '.join(cmd), self.run_env)
         if not p.returncode == 0:
-            self.log.error(err)
+            self.log.error(self.std_err['create_batch'])
             sys.exit(p.returncode)
-        self.create_batch_status()
+        else:
+            self.log.info('\n'+('-'*20)+'\n'+self.std_out['create_batch'])
+
+        self.status_createbatch()
+
+
+    def run_ets_validate(self, batch_id):
+
+        self.log.info('Running ETS Validation')
+        sys.stdout.write('Running ETS Validation\n')
+
+        if batch_id == None:
+            if 'batch' in self.batch_create_data.keys():
+                batch_id = self.batch_create_data['batch'][1]['batch']
+            else:
+                sys.log.error('batch id not found, cannot proceed with ETS validation')
+                sys.exit(1)
+
+        sql_path = distutils.sysconfig.get_python_lib()
+        cmd = [ 'sqlplus', '-S', 'apps/apps', '@' + os.path.join(sql_path, 'notify/plsql/ets_validate.sql'), str(batch_id) ]
+
+        self.log.debug(' '.join(cmd))
+
+        (self.std_out['ets_valid'], self.std_err['ets_valid'], p) =  os_system_command( ' '.join(cmd), self.run_env)
+        if not p.returncode == 0:
+            self.log.error(self.std_err['ets_valid'])
+            sys.exit(p.returncode)
+        else:
+            self.log.info('\n'+('-'*20)+'\n'+self.std_out['ets_valid'])
+
+        self.ets_codes_found = False
+        key = self.load_opts['ets_key']
+        codes = dict()
+
+        for line in self.std_out['ets_valid'].split('\n'):
+            if key in line:
+                lsp = [ i.strip() for i in line.split('=') ]
+                if len(lsp) > 1:
+                    codes[ key ] = lsp[1]
+                break
+
+        if not key in codes:
+            log.error('%s: no such key/pattern found for validation of ETS codes' % key)
+
+        self.batch_create_data.update( { key : [ lsp[1], codes ] }    )
+
+        try:
+            self.ets_codes_found = int(self.batch_create_data[key][1][key]) > 0
+        except ValueError:
+            log.error('Unexpected error in converting ETS error code count')
+            self.ets_codes_found = True
+
+
+
+    def run_request_set(self, batch_id):
+
+        self.log.info('Running request set')
+        sys.stdout.write('Running request set\n')
+
+        if batch_id == None:
+            if 'batch' in self.batch_create_data.keys():
+                batch_id = self.batch_create_data['batch'][1]['batch']
+            else:
+                sys.log.error('batch id not found, cannot proceed with running request set')
+                sys.exit(1)
+
+
+        if self.ets_codes_found == None:
+            self.run_ets_validate(batch_id)
+
+        if self.ets_codes_found == True:
+            k1 = self.load_opts['ets_key']
+            self.log.warn('%s: ETS codes need to be added for batch ID %s' % (self.batch_create_data[k1][1][k1], str(batch_id)))
+            sys.stderr.write('WARN:  %s: ETS codes need to be added for batch ID %s' % (self.batch_create_data[k1][1][k1], str(batch_id)))
+            sys.exit(1)
+
+        sql_path = distutils.sysconfig.get_python_lib()
+        cmd = [ 'sqlplus', '-S', 'apps/apps', '@'+ os.path.join(sql_path, 'notify/plsql/run_request_set.sql'), str(batch_id) ]
+
+        self.log.debug(' '.join(cmd))
+        (self.std_out['request_set'], self.std_err['request_set'] , p) =  os_system_command( ' '.join(cmd), self.run_env)
+        if not p.returncode == 0:
+            self.log.error(self.std_err['request_set'])
+            sys.exit(p.returncode)
+        else:
+            self.log.info('\n'+('-'*20)+'\n'+self.std_out['request_set'])
 
 
     def validate(self):
@@ -227,20 +361,23 @@ class loader(object):
                 for line in f:
                     if self.load_opts['site_list'] in line:
                         self.valid_sites = line.split('=')[1].strip().split('|')
-                        self.log.info(self.valid_sites)
+                        self.log.debug(self.valid_sites)
         except IOError as err:
             self.log.error( 'I/O error {0} {1}'.format(err.errno, err.strerror))
             sys.exit(err.errno)
 
-        ## check if site is one among allowed (valid) sites
-        if self.options.blsite.strip() not in self.valid_sites:
-            self.log.error( 'not a valid site: %s. sites must be one of [ %s ]' % (self.options.blsite, ', '.join(self.valid_sites)) )
-            sys.exit(1)
+        if  self.opt_path == 'one':
+            ## check if site is one among allowed (valid) sites
+            if self.options.blsite.strip() not in self.valid_sites:
+                self.log.error( 'not a valid site: %s. sites must be one of [ %s ]' % (self.options.blsite, ', '.join(self.valid_sites)) )
+                sys.exit(1)
 
-        ## ensure batch size > 0
-        if self.options.blsize < 1:
-            self.log.error('invalid batch size: %d, must be a positive whole number' % self.options.blsize)
-            sys.exit(1)
+            ## ensure batch size > 0
+            if self.options.blsize < 1:
+                self.log.error('invalid batch size: %d, must be a positive whole number' % self.options.blsize)
+                sys.exit(1)
+
+            self.log.info('SITE = %s, BATCH_SIZE = %d\n' % (self.options.blsite.strip(), self.options.blsize))
 
         ## append additional environment (capture default env set by ORACLE apps)
         self.log.debug('setting up environment variables for ORACLE apps: %s' % self.load_opts['environment'])
@@ -258,7 +395,7 @@ class loader(object):
         self.capture_env(env_vars)
 
 
-    def create_batch_status(self):
+    def status_createbatch(self):
         pat_base = [ r'(?P<time>.+)', r'\[(?P<process>\S+)\]', r'(?P<status>Line: [0-9]+\s+INFO\s+\-)' ]
         ## regex patterns to extract from output
 
@@ -289,8 +426,10 @@ class loader(object):
                 'end_date':[ re.compile(r'\s+'.join(pat_finish).replace('time', 'end_date',1)), False ]
                 }
 
+        num_found = 0
 
-        for line in self.std_out.split('\n'):
+
+        for line in self.std_out['create_batch'].split('\n'):
             for pat in patterns:
                 multiline = True in patterns[pat]
                 res = None
@@ -300,17 +439,29 @@ class loader(object):
                 if res:
                     if pat in self.batch_create_data and multiline:
                         ## assume integer addition and try to add the two
-                        self.log.warn('already exists: %s' % line)
+                        #self.log.warn('already exists: %s' % line)
                         try:
                             res[pat] = str( int(self.batch_create_data[pat][1][pat]) + int(res[pat]) )
                         except ValueError:
                             pass
                     else:
                         self.batch_create_data.update( { pat:[line, res]})
+                        num_found += 1
 
         self.batch_create_data.update( { 'bluser':[self.user, {'bluser':self.user} ]})
+        num_found += 1
 
-    def batch_create_status(self, append = True):
+        required = ['fails', 'succs', 'end_date', 'start_date', 'bluser', 'procs', 'batch']
+
+        for it in required:
+            if not it in self.batch_create_data.keys():
+                msg = 'ERROR: Required data not found with key: %s' % it
+                self.log.error(msg)
+                self.stderr.write(msg+'\n')
+                sys.exit(1)
+
+
+    def update_createbatch(self, append = True):
 
         self.bcs_opts = config.getConfigSectionMap( self.config_vars, 'create-batch' )
 
@@ -344,13 +495,19 @@ class loader(object):
                  range = self.bcs_opts['column_range'], insertDataOption='INSERT_ROWS',
                  body=body_append).execute()
 
+        self.upd_cbxs = result.get('updates').get('updatedRange')
 
-        msg_body = 'batch %s completed at %s [P|F|T] = [%s|%s|%s]' % ( self.batch_create_data['batch'][1]['batch'] ,
-                self.batch_create_data['end_date'][1]['end_date'], self.batch_create_data['succs'][1]['succs'],
-                self.batch_create_data['fails'][1]['fails'], self.batch_create_data['procs'][1]['procs']
+        msg_stat = self.msg_type [ self.batch_create_data['fails'][1]['fails'].strip() == '0' ]
+
+        msg_body = '\nbatch-id: %s %s\npass: %s,fail: %s, proc: %s\nstart: %s\nend: %s\n' % ( self.batch_create_data['batch'][1]['batch'] , msg_stat,
+                self.batch_create_data['succs'][1]['succs'].strip(),
+                self.batch_create_data['fails'][1]['fails'].strip(),
+                self.batch_create_data['procs'][1]['procs'].strip(),
+                self.batch_create_data['start_date'][1]['start_date'].strip(),
+                self.batch_create_data['end_date'][1]['end_date'].strip(),
                 )
 
-        self.notifier.message('batch_create_notify', msg_body)
+        self.notifier.message('bc_notify_counts', msg_body)
 
     def cleanup(self):
         try:
@@ -362,12 +519,26 @@ class loader(object):
 
     def run(self):
         pars = [ 'user = %s' % self.user, 'datatype = %s' % self.load_opts['category'], 'pid = %s' % self.pid, datetime.datetime.now().strftime("last_run = %F %H:%M:%S\n") ]
+
         lock = Lock(self.lockfile, pars)
         try:
             lock.acquire()
             self.validate()
-            self.execute()
-            self.batch_create_status()
+
+            ## path one is creating a new batch(man), ets-validate(opt) and run-request set(opt)
+            if self.opt_path == 'one':
+                self.run_create_batch()
+                self.update_createbatch()
+                if self.load_opts['bc_ets_validate'].upper()[0] == 'Y':
+                    self.run_ets_validate(None)
+                if self.load_opts['bc_run_requestset'].upper()[0] == 'Y':
+                    self.run_request_set(None)
+
+            elif self.opt_path == 'two':
+                if self.options.ets_validate:
+                    self.run_ets_validate(self.options.batch_id)
+                if self.options.run_request:
+                    self.run_request_set(self.options.batch_id)
         except:
             pass
         finally:
